# teems-rust

./: .gitignore  Cargo.toml  README.md
src/: apps.rs  lib.rs  main.rs
src/apps/: alacritty.rs  kitty.rs  termite.rs  x.rs  x_helper.rs  xterm.rs
