[package]
name = "teems-rust"
version = "0.1.0"
authors = ["Florian Beeres <fbeeres@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
serde = "1.0.79"
dirs = "1.0.4"
serde_derive = "1.0.79"
serde_json = "1.0.31"
regex = "1.0.5"
failure = "0.1.2"
failure_derive = "0.1.2"

[dev-dependencies]
pretty_assertions = "0.5.1"
